--- a/Alunos.Testes.Mock/Alunos.Testes.Mock.csproj
+++ b/Alunos.Testes.Mock/Alunos.Testes.Mock.csproj
@@ -11,10 +11,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="bogus" Version="31.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="moq" Version="4.14.7" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Aluno.Domain\Alunos.Domain.csproj" />
   </ItemGroup>
 
 </Project>
