Ajustes Para Gravação

--- a/AlunoTestesAutoMock/Alunos.Testes.AutoMock.csproj
+++ b/AlunoTestesAutoMock/Alunos.Testes.AutoMock.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="AlunoServiceTesteAutoMockExemplo02OLD.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Bogus" Version="31.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.14.7" />
